--- a/.github/workflows/php-security.yml
+++ b/.github/workflows/php-security.yml
@@ -29,13 +29,13 @@ jobs:
           coverage: none
           extensions: mbstring
 
-#      - name: Run Snyk to check for vulnerabilities
-#        uses: snyk/actions/php@master
-#        env:
-#          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-#          SEVERITY_THRESHOLD: ${{ inputs.severity-threshold && format('--severity-threshold={0}', inputs.severity-threshold) || '' }}
-#        with:
-#          args: --sarif-file-output=snyk.sarif $SEVERITY_THRESHOLD
+      - name: Run Snyk to check for vulnerabilities
+        uses: snyk/actions/php@master
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+          SEVERITY_THRESHOLD: ${{ inputs.severity-threshold && format('--severity-threshold={0}', inputs.severity-threshold) || '' }}
+        with:
+          args: --sarif-file-output=snyk.sarif $SEVERITY_THRESHOLD
 
       - name: isPrivate
         uses: octokit/graphql-action@v2.x
@@ -54,6 +54,6 @@ jobs:
 
       - name: Upload result to GitHub Code Scanning
         if: ${{ fromJSON(steps.isPrivate.outputs.data).repository.isPrivate  == false }}
-        uses: github/codeql-action/upload-sarif@v2
+        uses: github/codeql-action/upload-sarif@v4
         with:
           sarif_file: snyk.sarif
